[#805] Name collisions: Change lazy evaluation detection and application to use qualified names.